--- a/index.html
+++ b/index.html
@@ -153,17 +153,18 @@ body {
     		$("#myModal").modal('show');
     	});
 		
-		window.watsonAssistantChatOptions = {
-			      integrationID: "c9fe6ecd-ed2e-4a71-ab76-509d7e75a960", // The ID of this integration.
-			      region: "us-south", // The region your integration is hosted in.
-			      serviceInstanceID: "782d680f-8669-4eb4-9967-89f5a47a7b0c", // The ID of your service instance.
-			      onLoad: function(instance) { instance.render(); }
-			    };
-			  setTimeout(function(){
-			    const t=document.createElement('script');
-			    t.src="https://web-chat.global.assistant.watson.appdomain.cloud/loadWatsonAssistantChat.js";
-			    document.head.appendChild(t);
-			  });
+  window.watsonAssistantChatOptions = {
+      integrationID: "84af39ce-2ed6-4e45-919b-99282344260f", // The ID of this integration.
+      region: "us-south", // The region your integration is hosted in.
+      serviceInstanceID: "782d680f-8669-4eb4-9967-89f5a47a7b0c", // The ID of your service instance.
+      onLoad: function(instance) { instance.render(); }
+    };
+  setTimeout(function(){
+    const t=document.createElement('script');
+    t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js"
+    document.head.appendChild(t);
+  });
+
 		
             function myFunction() {
                 var x = document.getElementById("myTopnav");
